add buttons based on search input

--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
 </head>
 
 <body>
-  <button id="spring">Spring</button>
-  <div id="images">
-  </div>
+<div>
+ 
 
-  <div>
+
 
     <input id="input" label="search" type="text"></input>
     <button id="search">Search</button>
+  
+    <div id="imageButton">
+      </div>
+  
+    <div id="images">
+    </div>
+  
   </div>
   
+
   
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
