--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Page Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
 </head>
 
 <body>
-<div>
- 
-
-
-
-    <input id="input" label="search" type="text"></input>
-    <button id="search">Search</button>
-  
-    <div id="imageButton">
+  <div class="container jumbotron">
+    <h1 class="text-center">It's Spring, Finally!</h1>
+    <hr class="my-5"> </hr>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="row">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <button class="btn btn-primary" id="add" type="button">Button</button>
+            </div>
+            <input type="text" id="input" class="form-control">
+          </div>
+        </div>
+        <div class="row" id="imageButton">
+        </div>
       </div>
-  
-    <div id="images">
+      <div class="col-md-8">
+        <div id="images">
+        </div>
+      </div>
     </div>
-  
   </div>
-  
+  </div>
 
-  
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/javascript/main.js"></script>
-  
+
 </body>
 
 </html>
